spacing issue with nav and header

--- a/src/Components/Navbar/Nav.css
+++ b/src/Components/Navbar/Nav.css
@@ -4,6 +4,7 @@
  margin-left: 1%;
  max-width: 100vw;
  text-align: center;
+ padding-bottom: 15%;
 }
 /* TITLE */
 .nav div{
